--- a/_site.yml
+++ b/_site.yml
@@ -9,4 +9,15 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
+  left:
+    - text: "DataViz Makeover"
+      menu:
+      - text: "DataViz Makeover 1"
+        href: "DataViz1"
+      - text: "DataViz Makeover 2"
+        href: "dataViz2"
+    - text: "Take-home Exercise"
+      menu:
+      - text: "Take-home Exercise 1"
+        href: "take-home_ex/th_ex1.html"
 output: distill::distill_article
