--- a/_site.yml
+++ b/_site.yml
@@ -20,4 +20,6 @@ navbar:
       menu:
       - text: "Take-home Exercise 1"
         href: "take-home_ex/th_ex1.html"
+      - text: "Take-home Exercise 2"
+        href: "take-home_ex/th_ex2.html"
 output: distill::distill_article
