--- a/_site.yml
+++ b/_site.yml
@@ -22,4 +22,8 @@ navbar:
         href: "take-home_ex/th_ex1.html"
       - text: "Take-home Exercise 2"
         href: "take-home_ex/th_ex2.html"
+    - text: "In-class Exercise"
+      menu:
+      - text: "In-class Exercise 4"
+        href: "In-class Exercise/in-class-exercise-4.html"
 output: distill::distill_article
