--- a/_site.yml
+++ b/_site.yml
@@ -28,4 +28,6 @@ navbar:
       menu:
       - text: "In-class Exercise 4"
         href: "In-class Exercise/in-class-exercise-4.html"
+      - text: "In-class Exercise 5"
+        href: "In-class Exercise/in-class-exercise-5.html"
 output: distill::distill_article
