--- a/_site.yml
+++ b/_site.yml
@@ -22,7 +22,7 @@ navbar:
         href: "take-home_ex/th_ex1.html"
       - text: "Take-home Exercise 2"
         href: "take-home_ex/th_ex2.html"
-      - text: "Tale-home Exercise 3"
+      - text: "Take-home Exercise 3"
         href: "take-home_ex/th_ex3.html"
     - text: "In-class Exercise"
       menu:
